--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -13,6 +13,7 @@
         android:background="@drawable/custom_bg_title_cuahang">
 
         <TextView
+            android:id="@+id/tvcuahang"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
