--- a/app/src/main/res/layout/activity_info_account.xml
+++ b/app/src/main/res/layout/activity_info_account.xml
@@ -164,7 +164,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorBlack"/>
+            android:background="@color/colorSilver"/>
         <LinearLayout
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
@@ -192,7 +192,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorBlack"/>
+            android:background="@color/colorSilver"/>
         <LinearLayout
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
@@ -220,7 +220,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorBlack"/>
+            android:background="@color/colorSilver"/>
         <LinearLayout
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
