--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -145,28 +145,52 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/custom_bg_radiobuttonground"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <RadioGroup
                 android:id="@+id/radiobuttondangky"
-                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/Nam"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/nam"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Nam"
                     android:textColor="@color/colorWhite"
                     android:textStyle="bold" />
 
                 <RadioButton
-                    android:id="@+id/Nữ"
+                    android:id="@+id/nu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nữ"
                     android:textColor="@color/colorWhite"
                     android:textStyle="bold" />
+
+            </RadioGroup>
+            <RadioGroup
+                android:id="@+id/radioCheck"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
+                <RadioButton
+                    android:id="@+id/nhanvien"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nhân viên"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorWhite"
+                    />
+                <RadioButton
+                    android:id="@+id/khachhang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Khách hàng"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorWhite"
+                    />
 
             </RadioGroup>
         </LinearLayout>
