--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -7,17 +7,17 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@drawable/custom_bg_title_cuahang">
+        android:background="@drawable/custom_bg_title_cuahang"
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tvcuahang"
-            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginTop="10dp"
             android:text="Cửa hàng"
             android:textColor="@color/colorBlack"
             android:textSize="20sp"
